Update to spin wheel, three major issues. Grey gap, the sections on the wheel seem to be off, but transform in css looks correct, and the return value is not right, as well as the wheel can be reset during spinning

--- a/src/component/SpinWheel.css
+++ b/src/component/SpinWheel.css
@@ -1,48 +1,99 @@
-body 
-{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  background: #333;
+@import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
-.container
-{
-  position: relative;
-  width: 400px;
-  height: 400px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.container .spinBtn
-{
-  position: absolute;
-  width: 60px;
-  height: 60px;
-  background: #fff;
-  border-radius: 50%;
-  z-index: 10;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-transform: uppercase;
-  font-weight: 600;
-  color: #333;
-  letter-spacing: 0.1em;
-  border: 4px solid rgba(0,0,0,0,75);
-  cursor: pointer;
-  user-select: none;
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: #333;
 }
 
-.container .spinBtr::before
-{
-  content: '';
-  position: absolute;
-  top: -20px;
-  width: 20px;
-  height: 30px;
-  background: #f00;
-  clip-path: polygon(50% 0%, 21% 100%, 80% 100%);
+.container {
+    position: relative;
+    width: 400px;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container .spinBtn {
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    background: #fff;
+    border-radius: 50%;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-transform: uppercase;
+    font-weight: 600;
+    color: #333;
+    letter-spacing: 0.1em;
+    border: 4px solid rgba(0, 0, 0, 0.75);
+    cursor: pointer;
+    user-select: none;
+}
+
+.container .spinBtn::before {
+    content: "";
+    position: absolute;
+    top: -20px;
+    width: 20px;
+    height: 30px;
+    background: #fff;
+    clip-path: polygon(50% 0%, 15% 100%, 85% 100%);
+}
+
+.container .wheel {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background: #333;
+    overflow: hidden;
+    box-shadow: 0 0 0 5px #333,
+    0 0 0 15px #fff,
+    0 0 0 18px #111;
+    transition: transform 5s ease-in-out;
+}
+
+.container .wheel .sec {
+    position: absolute;
+    width: 50%;
+    height: 50%;
+    background: var(--clr);
+    transform-origin: bottom right;
+    transform: rotate(calc(360deg / var(--num-sectors) * var(--i)));
+    clip-path: polygon(0 0, 56% 0, 100% 100%, 0 56%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    user-select: none;
+    cursor: pointer;
+}
+.container .wheel .sec span {
+    position: relative;
+    transform: rotate(45deg);
+    font-size: 12px;
+    font-weight: 700;
+    color: #fff;
+    text-shadow: 3px 5px 2px rgba(0, 0, 0, 0.15);
+}
+
+.container .wheel .sec span::after {
+    content: "$";
+    position: absolute;
+    font-size: 12px;
+    font-weight: 500;
 }
